[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packagelib"
version = "0.0.2"
authors = [
  { name="minetezter", email="minetezter@protonmail.net" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/Minetezter/packagelib"
"Bug Tracker" = "https://github.com/Minetezter/packagelib/issues"
