[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packagelib"
version = "0.1.3"
authors = [
  { name="minetezter", email="minetezter@protonmail.net" },
]
description = "Create and publish your own packages within Python!"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "twine >= 3.8.0",
    "build >= 0.10.0"
]

[project.urls]
"Homepage" = "https://github.com/Minetezter/packagelib"
"Bug Tracker" = "https://github.com/Minetezter/packagelib/issues"
